samples/_failures_safe/1761081544_472e53_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_528bf494.c: In function ‘read_string’:
./samples/SAFE/__tmp_528bf494.c:168:23: error: expected ‘)’ at end of input
  168 |     while (peek(lexer)
      |           ~           ^
      |                       )
./samples/SAFE/__tmp_528bf494.c:168:5: error: expected declaration or statement at end of input
  168 |     while (peek(lexer)
      |     ^~~~~
